--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -8,16 +8,37 @@ on:
   workflow_dispatch:      
 
 jobs:
-  publish-github-registry:
+  build-artifact:
     runs-on: ubuntu-latest
     steps:
+      # Checkout of the repository
       - uses: actions/checkout@v3
+      # Set up Node.js
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-          registry-url: https://npm.pkg.github.com/
+          node-version: '16.x'
+      # Install dependencies
       - run: yarn install
+      # Run tests
+      #- run: yarn test
+      # Build package
       - run: yarn build
-      - run: yarn publish
+  publish-package:
+    needs: build-artifact
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      # Checkout of the repository
+      - uses: actions/checkout@v3
+      # Set up Node.js
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+          registry-url: https://npm.pkg.github.com/
+          scope: '@ull-tfg'
+      - run: |
+          npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
